# Cpp_OPenCV_resize

./: .gitignore  CMakeLists.txt  README.md  readme.md
src/: main.cpp  resize.cpp  resize.h  resize_avx2.cpp  resize_original.cpp
